src/snapshots/ruff__linter__tests__C401_C401.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: UnnecessaryGeneratorSet
  location:
    row: 1
    column: 4
  end_location:
    row: 1
    column: 28
  fix:
    patch:
      content: "{x for x in range(3)}"
      location:
        row: 1
        column: 4
      end_location:
        row: 1
        column: 28
    applied: false

