src/snapshots/ruff__linter__tests__C401_C401.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
| x = set(x for x in range(3))
|> Unnecessary generator (rewrite as a `set` comprehension)
| x = set(
|     x for x in range(3)
| )
|> Unnecessary generator (rewrite as a `set` comprehension)

