src/snapshots/ruff__linter__tests__C402_C402.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: UnnecessaryGeneratorDict
  location:
    row: 1
    column: 1
  end_location:
    row: 1
    column: 31
  fix: ~

