src/snapshots/ruff__linter__tests__C402_C402.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
| dict((x, x) for x in range(3))
|> Unnecessary generator (rewrite as a `dict` comprehension)
| dict(
|     (x, x) for x in range(3)
| )
|> Unnecessary generator (rewrite as a `dict` comprehension)
  dict(((x, x) for x in range(3)), z=3)

