src/snapshots/ruff__linter__tests__C403_C403.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: UnnecessaryListComprehensionSet
  location:
    row: 1
    column: 4
  end_location:
    row: 1
    column: 30
  fix:
    patch:
      content: "{x for x in range(3)}"
      location:
        row: 1
        column: 4
      end_location:
        row: 1
        column: 30
    applied: false

