src/snapshots/ruff__linter__tests__C403_C403.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
| s = set([x for x in range(3)])
|> Unnecessary `list` comprehension (rewrite as a `set` comprehension)
| s = set(
|     [x for x in range(3)]
| )
|> Unnecessary `list` comprehension (rewrite as a `set` comprehension)

