src/snapshots/ruff__linter__tests__C404_C404.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: UnnecessaryListComprehensionDict
  location:
    row: 1
    column: 1
  end_location:
    row: 1
    column: 33
  fix: ~

