src/snapshots/ruff__linter__tests__C405_C405.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
| s1 = set([1, 2])
|> Unnecessary `list` literal (rewrite as a `set` literal)
| s2 = set((1, 2))
|> Unnecessary `tuple` literal (rewrite as a `set` literal)
| s3 = set([])
|> Unnecessary `list` literal (rewrite as a `set` literal)
| s4 = set(())
|> Unnecessary `tuple` literal (rewrite as a `set` literal)
  s5 = set()

