src/snapshots/ruff__linter__tests__C408_C408.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    UnnecessaryCollectionCall: tuple
  location:
    row: 1
    column: 4
  end_location:
    row: 1
    column: 11
  fix:
    patch:
      content: ()
      location:
        row: 1
        column: 4
      end_location:
        row: 1
        column: 11
    applied: false
- kind:
    UnnecessaryCollectionCall: list
  location:
    row: 2
    column: 4
  end_location:
    row: 2
    column: 10
  fix:
    patch:
      content: "[]"
      location:
        row: 2
        column: 4
      end_location:
        row: 2
        column: 10
    applied: false
- kind:
    UnnecessaryCollectionCall: dict
  location:
    row: 3
    column: 5
  end_location:
    row: 3
    column: 11
  fix:
    patch:
      content: "{}"
      location:
        row: 3
        column: 5
      end_location:
        row: 3
        column: 11
    applied: false
- kind:
    UnnecessaryCollectionCall: dict
  location:
    row: 4
    column: 5
  end_location:
    row: 4
    column: 14
  fix: ~

